crates/shell/src/shells/snapshots/starbase_shell__shells__ash__tests__formats_activate_hook.snap
---
source: crates/shell/src/shells/ash.rs
expression: "Ash::new().format_hook(Hook::Activate\n{\n    command: \"starbase hook ash\".into(), function: \"_starbase_hook\".into(),\n}).unwrap()"
---
_starbase_hook() {
  _starbase_hook_output=$(starbase hook ash)
  if [ -n "$_starbase_hook_output" ]; then
    eval "$_starbase_hook_output"
  fi
  unset _starbase_hook_output
}
