crates/shell/src/shells/snapshots/starbase_shell__shells__ash__tests__formats_cd_hook.snap
---
source: crates/shell/src/shells/ash.rs
expression: "Ash::new().format_hook(hook).unwrap()"
---
_starbase_hook() {
  _starbase_hook_output=$(starbase hook ash)
  if [ -n "$_starbase_hook_output" ]; then
    eval "$_starbase_hook_output"
  fi
  unset _starbase_hook_output
}

_starbase_deactivate() {
  _starbase_deactivate_output=$(starbase deactivate ash)
  if [ -n "$_starbase_deactivate_output" ]; then
    eval "$_starbase_deactivate_output"
  fi
  unset _starbase_deactivate_output
  unset -f cd _starbase_hook _starbase_deactivate
}

cd() {
  command cd "$@" || return $?
  _starbase_hook
  return 0
}
